--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
         <%= htmlWebpackPlugin.options.title %>
     </title>
 
+    <!-- LINK CUSTOM -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
